Fix Container/ Content Alignment Issues add margin

--- a/css/globals/utilities.css
+++ b/css/globals/utilities.css
@@ -2,13 +2,13 @@
     width: 1400px;
     max-width: 100%;
     height: auto;
+    margin: auto;
 }
 
 .main-content {
     max-width: 100%;
     width: 75%;
 }
-
 
 .row {
     display: flex;
